# split-markdown4gpt

./: .coveragerc  .isort.cfg  API.md  AUTHORS.md  CONTRIBUTING.md  README.md  pydoc-markdown.yml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.md
src/split_markdown4gpt/: __init__.py  __main__.py  skeleton.py  splitter.py
tests/: conftest.py  test.md  test_skeleton.py  test_splitter.py
