[metadata]
name = split_markdown4gpt
description = A Python tool for splitting large Markdown files into smaller sections based on a specified token limit. This is particularly useful for processing large Markdown files with GPT models, as it allows the models to handle the data in manageable chunks.
author = Adam Twardoch
author_email = adam+github@twardoch.com
license = Apache-2.0
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/twardoch/split-markdown4gpt
project_urls =
    Documentation = https://github.com/twardoch/split-markdown4gpt
    Source = https://github.com/twardoch/split-markdown4gpt
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Text Processing
    Topic :: Text Processing :: Markup :: Markdown
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
python_requires = >=3.10
install_requires =
    importlib-metadata; python_version<"3.8"
    fire
    frontmatter
    tiktoken
    mistletoe
    syntok
    regex
    PyYAML

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    mdsplit4gpt = split_markdown4gpt.__main__:cli


[tool:pytest]
addopts =
    --cov split_markdown4gpt --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.4.1
package = split_markdown4gpt
extensions =
    github_actions
    markdown
    pre_commit
